fixed issues of options on mobile devices

--- a/demo.css
+++ b/demo.css
@@ -42,11 +42,14 @@ nav h1 {
 .options {
     font-size: 20px;
     margin: 20px auto;
-    width: 100px;
+    width: 300px;
     border: 1px solid #eee;
-    padding: 0 50px 15px 50px;
+    padding: 0 10px 15px 10px;
     list-style-position: inside;
     box-shadow: 0.5px 0.5px 5px rgba(0, 0, 0, 0.3);
+    box-sizing: border-box;
+    list-style-type: none;
+    text-align: center;
 }
 
 .options p {
